--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,9 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, KFold, cross_validate\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, f1_score, classification_report"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,7 @@
        "4                          2           1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +289,7 @@
        "LeaveOrNot                    0.0     1.0     1.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +309,7 @@
        "(4653, 9)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +338,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -355,29 +357,18 @@
      "output_type": "stream",
      "text": [
       "Number of duplicate records: 1889\n",
-      "Shape after dropping duplicate records: (2764, 9)\n"
+      "Shape after dropping duplicate records: (4653, 9)\n"
      ]
     }
    ],
    "source": [
     "duplicates = data.duplicated().sum()\n",
-    "data = data.drop_duplicates()\n",
-    "\n",
-    "print('Number of duplicate records:', duplicates)\n",
-    "print('Shape after dropping duplicate records:', data.shape)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Processing"
+    "print('Number of duplicate records:', duplicates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +377,7 @@
        "<AxesSubplot:xlabel='Education', ylabel='count'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -409,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +409,7 @@
        "<AxesSubplot:xlabel='JoiningYear', ylabel='count'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +441,7 @@
        "<AxesSubplot:xlabel='PaymentTier', ylabel='count'>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +473,7 @@
        "<AxesSubplot:xlabel='City', ylabel='count'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +505,7 @@
        "<AxesSubplot:xlabel='AgeGroup', ylabel='count'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -539,14 +530,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_29442/2043227787.py:3: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
+      "/tmp/ipykernel_75561/2043227787.py:3: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  sns.heatmap(corr, mask=np.zeros_like(corr, dtype=np.bool),\n"
      ]
@@ -557,7 +548,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -592,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -7054,16 +7045,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f742a006a00>"
+       "<seaborn.axisgrid.PairGrid at 0x7fb7c0853a00>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7106,6 +7097,94 @@
     "* As we analysed in **joining year** the employees with **less experience** are the one's who are leaving the company. The company can offer a raise in the salary.\n",
     "\n",
     "* **Young** employees most likely to leave. The company should be a stable company and give them a raise in salary."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Models\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions to train and analyse data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_and_analyze(model, X_train, y_train, X_test, y_test):\n",
+    "    # fitting the object\n",
+    "    model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # finding the predicted valued\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    # determine test accuracy\n",
+    "    test_data_accuracy = accuracy_score(y_pred, y_test)\n",
+    "\n",
+    "    # F1_score = 2 * (P * R)/(P + R)\n",
+    "    #   P : Precision\n",
+    "    #   R : Recall of the model\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "    #   >> Accuracy vs F1-score\n",
+    "    # Accuracy is used when the True Positives and True negatives are more important \n",
+    "    # while F1-score is used when the False Negatives and False Positives are crucial\n",
+    "\n",
+    "    print()\n",
+    "    print(\"---- Model Analysis ----\")\n",
+    "    print('Accuracy: ', test_data_accuracy * 100, \"%\")\n",
+    "    print('F1 Score: ', f1 * 100, \"%\")\n",
+    "    \n",
+    "    print()\n",
+    "    \n",
+    "    print(\"---- Confusion Matrix ----\")\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "    ax.imshow(cm)\n",
+    "    ax.grid(False)\n",
+    "    ax.xaxis.set(ticks=(0, 1), ticklabels=('Predicted 0s', 'Predicted 1s'))\n",
+    "    ax.yaxis.set(ticks=(0, 1), ticklabels=('Actual 0s', 'Actual 1s'))\n",
+    "    ax.set_ylim(1.5, -0.5)\n",
+    "    for i in range(2):\n",
+    "        for j in range(2):\n",
+    "            ax.text(j, i, cm[i, j], ha='center', va='center', color='red')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    print()\n",
+    "    print(\"---- Classification Report ----\")\n",
+    "    print( classification_report(y_test, model.predict(X_test)) )\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def hyperparameters(model, params, X, y):\n",
+    "    print(\">> Find hyperparameters for a model\")\n",
+    "\n",
+    "    model = GridSearchCV(model, params, scoring=\"accuracy\")\n",
+    "    model.fit(X, y)\n",
+    "    print(\" Best Params:\", model.best_params_)\n",
+    "\n",
+    "    return model.best_params_\n",
+    "\n",
+    "\n",
+    "\n",
+    "def kfold(model, k, X, Y):\n",
+    "    print(\">> k-fold cross-validation\")\n",
+    "    \n",
+    "    kf = KFold(n_splits=k, shuffle=True)\n",
+    "    scores = cross_validate(model, X, Y, scoring=\"accuracy\", cv=kf, return_estimator=True)\n",
+    "    return scores[\"estimator\"][np.argmax(scores[\"test_score\"])]"
    ]
   }
  ],
